ajustei os planos e implementai a função de empresa, ajustei toda a mecanica de planos.